# JanjicDiplomeBA3

./: README.md  pyproject.toml  test_csv_data.csv
src/: database.ini  db_manager.py  main.py  utils.py
tests/: test_db_manager.py  test_utils.py
